objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Area_Code__c</fullName>
        <label>Area Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Name__c</fullName>
        <label>Area Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Br_Code__c</fullName>
        <formula>Parent.Branch_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <label>Branch Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <formula>Parent.Distributor_Code__c</formula>
        <label>Distributor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_PhoneNo__c</fullName>
        <label>Contact PhoneNo</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Score__c</fullName>
        <description>Created to store current New survey result total score field</description>
        <label>Current Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Category__c</fullName>
        <description>Created for Account Store</description>
        <label>Customer Category</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Db_Code__c</fullName>
        <formula>Parent.Parent.Distributor_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Code__c</fullName>
        <externalId>true</externalId>
        <label>Distributor Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Distributor_Name__c</fullName>
        <formula>Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Golden_Store_Indicator__c</fullName>
        <formula>IF(Golden_Store__c == true, IMAGE(&quot;/servlet/servlet.FileDownload?file=01541000001RiqA&quot;, &quot;&quot;),&quot;&quot;)</formula>
        <label>Golden Store Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Golden_Store__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Golden Store</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lat_and_Long__c</fullName>
        <label>Lat and Long</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Local_Channel_Code__c</fullName>
        <description>Created as a dependent field to Sub Channel Code for Store Account</description>
        <globalPicklist>ChannelCodePicklist</globalPicklist>
        <label>Local Channel Code</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maps__c</fullName>
        <description>Created the field to show GMAP on Store Page Layout of Account object</description>
        <formula>IMAGE( 
&quot;http://maps.google.com/maps/api/staticmap?center=&quot; + BillingStreet + &quot;,&quot; + BillingCity + &quot;,&quot; + BillingState + &quot; &quot; + BillingPostalCode +&quot;&amp;zoom=13&amp;size=650x250&amp;markers=color:blue|&quot; + BillingStreet + &quot;,&quot; + BillingCity + &quot;,&quot; + BillingState + &quot; &quot; + BillingPostalCode + &quot;&amp;sensor=false&amp;format=png32&quot; , &quot;no map available&quot;, 250, 650)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part to relate only Branches to Store account</description>
        <label>Parent Branch</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Branch</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Score__c</fullName>
        <description>Created to roll up survey result of previous survey</description>
        <label>Previous Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seller_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Seller</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StoreCode__c</fullName>
        <label>Store Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Purchase_Type__c</fullName>
        <label>Store Purchase Type</label>
        <picklist>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Channel_Code__c</fullName>
        <description>Created by Faizan to act as controlling field for local channel code</description>
        <globalPicklist>ChannelCodePicklist</globalPicklist>
        <label>Sub Channel Code</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TaxPercentage__c</fullName>
        <defaultValue>0.12</defaultValue>
        <label>TaxPercentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Plan</label>
        <referenceTo>Visit_Plan__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_Branches</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Branch</value>
        </filters>
        <label>All Branches</label>
    </listViews>
    <listViews>
        <fullName>All_Distributors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Address__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Distributor</value>
        </filters>
        <label>All Distributors</label>
    </listViews>
    <listViews>
        <fullName>All_Stores</fullName>
        <columns>Parent_Branch__c</columns>
        <columns>StoreCode__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Sub_Channel_Code__c</columns>
        <columns>Local_Channel_Code__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Golden_Store__c</columns>
        <columns>Frequency__c</columns>
        <columns>Seller_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Store</value>
        </filters>
        <label>All Stores</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Golden_Stores</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Golden_Store__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Golden Stores</label>
    </listViews>
    <listViews>
        <fullName>My_Stores</fullName>
        <columns>StoreCode__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Local_Channel_Code__c</columns>
        <columns>Seller_Name__c</columns>
        <columns>Customer_Category__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Golden_Store__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Store</value>
        </filters>
        <label>My Stores</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Branch</fullName>
        <active>true</active>
        <label>Branch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>false</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distributor</fullName>
        <active>true</active>
        <label>Distributor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Store</fullName>
        <active>true</active>
        <label>Store</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_Parent_Account_for_Distributor</fullName>
        <active>true</active>
        <description>For Distributor record type we cannot associate any parent</description>
        <errorConditionFormula>AND(RecordType.DeveloperName == &quot;Distributor&quot;, Parent.Id != NULL)</errorConditionFormula>
        <errorMessage>You cannot enter Parent Account for a distributor</errorMessage>
    </validationRules>
</CustomObject>